# cks-keywords

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
benchmarks/: run_stage10_regression.py
docs/: algorithm.md  release_checklist.md
examples/: quickstart.ipynb
src/cks_keywords/: candidates.py  cli.py  config.py  extractor.py
src/cks_keywords.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cks_keywords/resources/paper1-w050-s40/: canonical_mapping.csv  configuration_sha256.txt  fitted_resources.json
tests/: test_canonical.py  test_profile.py  test_scoring.py
